[gd_scene load_steps=20 format=3 uid="uid://4qt46ak8f35e"]

[ext_resource type="Script" path="res://scripts/tasks/task_maze.gd" id="1_sva14"]
[ext_resource type="Texture2D" uid="uid://bj12jitcsxdmi" path="res://imgs/sprites/tasks/boss/boss-minigame.png" id="2_h7qkc"]
[ext_resource type="Texture2D" uid="uid://kbwtk2atifwf" path="res://imgs/sprites/tasks/boss/boss-minigame_empty.png" id="2_tr1jo"]
[ext_resource type="Texture2D" uid="uid://boipsn1085afe" path="res://imgs/sprites/tasks/boss/continue_mask.png" id="4_bapdd"]
[ext_resource type="BitMap" path="res://imgs/sprites/tasks/boss/boss-minigame_mask_bitmap.tres" id="4_vyfy2"]
[ext_resource type="BitMap" path="res://imgs/sprites/tasks/boss/continue_mask_bitmap.tres" id="5_0ocyw"]
[ext_resource type="Texture2D" uid="uid://svwcesr5po2k" path="res://imgs/sprites/arrow_mask.png" id="6_1l6sf"]
[ext_resource type="BitMap" path="res://imgs/sprites/arrow_ask_bitmap.tres" id="7_gbju3"]
[ext_resource type="Texture2D" uid="uid://cviltk10vq2sj" path="res://imgs/sprites/arrow.png" id="8_j7f26"]
[ext_resource type="FontFile" uid="uid://dk4sfbnymglpf" path="res://resources/PixeloidSans-mLxMm.ttf" id="9_xmgal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i18cd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mr027"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igyn1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ubo2n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q8lac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kj38l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwutt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bu5ie"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25pwc"]

[node name="Task_maze" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sva14")
task_name = "Crack the Vault"
task_description = "Open the vault in Big D's office"
tag = 6
whole_day = true

[node name="Active" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EMpty" type="TextureRect" parent="Active"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_tr1jo")

[node name="Start" type="Control" parent="Active"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Start" type="TextureButton" parent="Active/Start"]
self_modulate = Color(0, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 233.0
offset_top = 480.0
offset_right = 433.0
offset_bottom = 608.0
texture_hover = ExtResource("4_bapdd")
texture_click_mask = ExtResource("5_0ocyw")
stretch_mode = 0

[node name="Maze" type="Control" parent="Active"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Maze" type="TextureRect" parent="Active/Maze"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_h7qkc")

[node name="Walls" type="TextureButton" parent="Active/Maze"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_click_mask = ExtResource("4_vyfy2")
stretch_mode = 0

[node name="border_u" type="TextureButton" parent="Active/Maze"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 513.0
offset_top = 1.0
offset_right = -490.0
offset_bottom = -1020.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 0

[node name="border_d" type="TextureButton" parent="Active/Maze"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 512.0
offset_top = 989.0
offset_right = -487.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 0

[node name="Checkpoint" type="Button" parent="Active/Maze"]
layout_mode = 0
offset_left = 1025.0
offset_top = 260.0
offset_right = 1131.0
offset_bottom = 367.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_i18cd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mr027")
theme_override_styles/hover = SubResource("StyleBoxEmpty_igyn1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ubo2n")
theme_override_styles/normal = SubResource("StyleBoxEmpty_q8lac")

[node name="Checkpoint2" type="Button" parent="Active/Maze"]
layout_mode = 0
offset_left = 1177.0
offset_top = 723.0
offset_right = 1283.0
offset_bottom = 830.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_kj38l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uwutt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bu5ie")
theme_override_styles/normal = SubResource("StyleBoxEmpty_25pwc")

[node name="Continue" type="TextureButton" parent="Active/Maze"]
self_modulate = Color(0, 0.792157, 1, 0.533333)
texture_filter = 1
offset_left = 1520.0
offset_top = 424.0
offset_right = 1720.0
offset_bottom = 552.0
texture_hover = ExtResource("4_bapdd")
texture_click_mask = ExtResource("5_0ocyw")
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Active/Maze"]
texture_filter = 1
layout_mode = 0
offset_left = 76.0
offset_top = 62.0
offset_right = 453.0
offset_bottom = 297.0
theme_override_fonts/normal_font = ExtResource("9_xmgal")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Don't touch the walls![/center]"

[node name="Leave" type="TextureButton" parent="Active"]
self_modulate = Color(0, 0.792157, 1, 0.533333)
texture_filter = 1
layout_mode = 0
offset_left = 81.0
offset_top = 855.0
offset_right = 214.0
offset_bottom = 1021.0
texture_hover = ExtResource("6_1l6sf")
texture_click_mask = ExtResource("7_gbju3")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Active/Leave"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_j7f26")

[connection signal="pressed" from="Active/Start/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Active/Maze/Walls" to="." method="_on_walls_mouse_entered"]
[connection signal="mouse_entered" from="Active/Maze/border_u" to="." method="_on_walls_mouse_entered"]
[connection signal="mouse_entered" from="Active/Maze/border_d" to="." method="_on_walls_mouse_entered"]
[connection signal="mouse_entered" from="Active/Maze/Checkpoint" to="." method="_on_checkpoint_mouse_entered"]
[connection signal="mouse_entered" from="Active/Maze/Checkpoint2" to="." method="_on_checkpoint_2_mouse_entered"]
[connection signal="pressed" from="Active/Maze/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Active/Leave" to="." method="_on_leave_pressed"]
